--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,9 +1,9 @@
 .nav-title {
-    font-size: 24px;
-    font-weight: 700;
-    display: inline-block;
-    color: #f2f2f2;
-    padding-left: 10px;
+  font-size: 24px;
+  font-weight: 700;
+  display: inline-block;
+  color: #f2f2f2;
+  padding-left: 10px;
 }
 
 .nav {
@@ -11,8 +11,12 @@
   background-color: #00acb0;
 }
 
+.nav-middle {
+  display: inline-block;
+}
+
 .nav-link {
-  float: left;
+  display: inline-block;
   color: #f2f2f2;
   background-color: #00acb0;
   text-align: center;
@@ -22,9 +26,9 @@
 
   /* these last two make the logout button in
   the nav bar look like another link */
-  border:none;
+  border: none;
   cursor: pointer;
-  outline:0;
+  outline: 0;
 }
 
 .nav-link:hover {
@@ -32,5 +36,5 @@
 }
 
 .nav-right {
-  float: right;
+  display: inline-block;
 }
