--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -13,6 +13,8 @@
 
 .nav-middle {
   display: inline-block;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .nav-link {
@@ -33,8 +35,4 @@
 
 .nav-link:hover {
   background-color: #008183;
-}
-
-.nav-right {
-  display: inline-block;
 }
