--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,14 +1,20 @@
+.image {
+  width: 25px;
+  height: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .nav-title {
   font-size: 24px;
   font-weight: 700;
   display: inline-block;
-  color: #f2f2f2;
+  color: red;
   padding-left: 10px;
 }
 
 .nav {
-  overflow: hidden;
-  background-color: #00acb0;
+  background-color: #ffffff;
 }
 
 .nav-middle {
@@ -19,12 +25,13 @@
 
 .nav-link {
   display: inline-block;
-  color: #f2f2f2;
-  background-color: #00acb0;
+  color: black;
+  background-color: white;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 18px;
+  font-weight: bold;
 
   /* these last two make the logout button in
   the nav bar look like another link */
@@ -34,5 +41,5 @@
 }
 
 .nav-link:hover {
-  background-color: #008183;
+  background-color: rgb(221, 221, 221);
 }
