styling for profile page, landing page

--- a/src/components/DoggoPage/DoggoPage.css
+++ b/src/components/DoggoPage/DoggoPage.css
@@ -14,6 +14,13 @@ form {
   padding-top: 50px;
 }
 
+.profileCard {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+}
+
 .container {
   position: relative;
   text-align: center;
