--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -13,13 +13,19 @@
   padding-left: 10px;
 }
 
+.nav-welcome {
+  display: inline-block;
+  padding-left: 350px;
+  color: red;
+}
+
 .nav {
   background-color: #ffffff;
 }
 
 .nav-middle {
   display: inline-block;
-  padding-left: 200px;
+  padding-left: 250px;
   padding-right: 100px;
 }
 
