delete code not used. fix errors

--- a/src/components/DoggoPage/DoggoPage.css
+++ b/src/components/DoggoPage/DoggoPage.css
@@ -9,11 +9,16 @@ form {
 
 .taskImg {
   float: right;
+  padding-right: 100px;
 }
 
 .tasks {
   color: white;
   font-weight: bold;
+}
+
+.taskArea {
+  padding-left: 75px;
 }
 
 .dashboardHeading {
